[gd_scene load_steps=2 format=3 uid="uid://options_menu"]

[ext_resource type="Script" path="res://scripts/ui/options_menu.gd" id="1_options"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_options")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.03, 0.08, 1)

[node name="SafeAreaMargin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="MainVBox" type="VBoxContainer" parent="SafeAreaMargin"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="TopBar" type="HBoxContainer" parent="SafeAreaMargin/MainVBox"]
layout_mode = 2

[node name="BackButton" type="Button" parent="SafeAreaMargin/MainVBox/TopBar"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(60, 50)
theme_override_font_sizes/font_size = 24
text = "‚Üê"

[node name="TitleLabel" type="Label" parent="SafeAreaMargin/MainVBox/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "OPTIONS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer" type="Control" parent="SafeAreaMargin/MainVBox/TopBar"]
layout_mode = 2
custom_minimum_size = Vector2(60, 0)

[node name="SettingsContainer" type="VBoxContainer" parent="SafeAreaMargin/MainVBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 40

[node name="MusicSection" type="VBoxContainer" parent="SafeAreaMargin/MainVBox/SettingsContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="MusicHeader" type="HBoxContainer" parent="SafeAreaMargin/MainVBox/SettingsContainer/MusicSection"]
layout_mode = 2

[node name="MusicLabel" type="Label" parent="SafeAreaMargin/MainVBox/SettingsContainer/MusicSection/MusicHeader"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "üéµ Music"

[node name="MusicValueLabel" type="Label" parent="SafeAreaMargin/MainVBox/SettingsContainer/MusicSection/MusicHeader"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "80%"

[node name="MusicSlider" type="HSlider" parent="SafeAreaMargin/MainVBox/SettingsContainer/MusicSection"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 40)
min_value = 0.0
max_value = 1.0
step = 0.05
value = 0.8

[node name="SFXSection" type="VBoxContainer" parent="SafeAreaMargin/MainVBox/SettingsContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="SFXHeader" type="HBoxContainer" parent="SafeAreaMargin/MainVBox/SettingsContainer/SFXSection"]
layout_mode = 2

[node name="SFXLabel" type="Label" parent="SafeAreaMargin/MainVBox/SettingsContainer/SFXSection/SFXHeader"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "üîä Sound Effects"

[node name="SFXValueLabel" type="Label" parent="SafeAreaMargin/MainVBox/SettingsContainer/SFXSection/SFXHeader"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "100%"

[node name="SFXSlider" type="HSlider" parent="SafeAreaMargin/MainVBox/SettingsContainer/SFXSection"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 40)
min_value = 0.0
max_value = 1.0
step = 0.05
value = 1.0

[node name="VibrationSection" type="HBoxContainer" parent="SafeAreaMargin/MainVBox/SettingsContainer"]
layout_mode = 2

[node name="VibrationLabel" type="Label" parent="SafeAreaMargin/MainVBox/SettingsContainer/VibrationSection"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "üì≥ Vibration"

[node name="VibrationToggle" type="CheckButton" parent="SafeAreaMargin/MainVBox/SettingsContainer/VibrationSection"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = ""

[node name="Spacer" type="Control" parent="SafeAreaMargin/MainVBox"]
layout_mode = 2
size_flags_vertical = 3
